--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "3; url = https://www.facebook.com/" />
+      <meta http-equiv = "refresh" content = "3; url = soundjudgement://app/record?record-type=free record" />
    </head>
    <body>
       <p>Redirecting to another URL</p>
